feat: Set nginx & oauth2(#25, #35)